# KED2024

./: .gitignore  README.md  dodo.py  lecture_intro.md  pyproject.toml  requirements.txt
KED2023/: _quarto.yml  assignments.qmd  index.qmd  lectures.qmd  materials.qmd  schedule.qmd
KED2023/lectures/html/: KED2023_04.html  KED2023_06.html  KED2023_09.html  KED2023_10.html  KED2023_11.html  KED2023_12.html  KED2023_supplements.html
KED2023/lectures/md/: KED2023_01.md  KED2023_02.md  KED2023_03.md  KED2023_04.md  KED2023_05.md  KED2023_06.md  KED2023_07.md  KED2023_08.md  KED2023_09.md  KED2023_10.md  KED2023_11.md  KED2023_12.md  KED2023_13.md  KED2023_supplements.md  _quarto.yml
KED2023/materials/: cheatsheet_command_line.md  installation_guide.md
docs/: assignments.html  index.html  lectures.html  materials.html  robots.txt  schedule.html  search.json  sitemap.xml
docs/assignments/assignment_1/: ked2024_assignment_1.md
docs/assignments/assignment_2/: ked2024_assignment_2_solution.ipynb
docs/lectures/html/: ked2024_03.html  ked2024_04.html  ked2024_06.html  ked2024_07.html  ked2024_08.html  ked2024_09.html  ked2024_10.html  ked2024_11.html  ked2024_12.html  ked2024_supplements.html  leftover_from_ked2023.html
docs/materials/: installation_guide.md
docs/materials/code/: ked2024_07.ipynb  ked2024_08.ipynb  ked2024_09.ipynb
ked2024/: _quarto.yml  assignments.qmd  index.qmd  lectures.qmd  materials.qmd  schedule.qmd
ked2024/assignments/: ked2024_assignment_1.md
ked2024/lectures/md/: .doit.db  (+23 more)
ked2024/materials/: installation_guide.md
lib/: utils.sh
(+20 files in other folders)
