[tool.poetry]
name = "ked2023"
version = "0.1.0"
description = "The ABC of Computational Text Analysis. BA Seminar, Spring 2023, University of Lucerne"
authors = ["Alex Flückiger"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
wheel = "^0.38.4"
pandas = "^1.5.3"
matplotlib = "^3.7.0"
jupyterlab = "^3.6.1"
textacy = "^0.12.0"
scattertext = "^0.1.12"
spacy = "3.5"
en-core-web-sm = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.5.0/en_core_web_sm-3.5.0-py3-none-any.whl"}
de-core-news-sm = {url = "https://github.com/explosion/spacy-models/releases/download/de_core_news_sm-3.5.0/de_core_news_sm-3.5.0-py3-none-any.whl"}
black = "^23.1.0"
jupyter = "^1.0.0"
ipywidgets = "^8.0.4"
pykernel = "^0.1.6"
beautifulsoup4 = "^4.12.2"
rise = "^5.7.1"
plotnine = "^0.10.1"


[tool.poetry.group.dev.dependencies]
doit = "^0.36.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
